# jumping-jimothy

./: .gitignore  A5Template.cbp  CMakeLists.txt  JumpingJimothy.cbp  JumpingJimothy.depend  PLEASESTEAMYME.txt  README.md
assets/: StaticBlock.pdn  Thumbs.db
assets/data/: level_13.xml  level_4.xml  level_5.xml
include/: ActionBinder.h  Box.h  Button.h  Character.h  CheckBox.h  CollisionBox.h  Config.h  Controls.h  DisplayMode.h  DynamicBox.h  Editor.h  Explosive.h  Game.h  Globals.h  Goat.h  Init.h  JoystickCodes.h  JoystickListener.h  KeyListener.h  LevelSelect.h  Menu.h  MouseListener.h  MusicManager.h  Options.h  Sensor.h  Sound.h  State.h  StateManager.h  StaticBox.h  ToggleBox.h  Tools.h  ToolsTestSuite.h  UIElement.h  UIHandler.h  button.h  editor.h  game.h  globals.h  init.h  joystickListener.h  (+5 more)
include/editor/: Editor.h
include/game/: Box.h  Character.h  CollisionBox.h  DynamicBox.h  Explosive.h  Game.h  Goat.h  Sensor.h  StaticBox.h  World.h  World.h.save-failed
include/menu/: LevelSelect.h  Menu.h  Options.h
include/rapidxml/: rapidxml.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
include/ui/: Button.h  CheckBox.h  Label.h  ToggleBox.h  UIElement.h  UIHandler.h
include/util/: ActionBinder.h  Config.h  Controls.h  DisplayMode.h  Globals.h  JoystickCodes.h  JoystickListener.h  KeyListener.h  MouseListener.h  MusicManager.h  Sound.h  (+1 more)
src/: ActionBinder.cpp  Box.cpp  Button.cpp  Character.cpp  CheckBox.cpp  CollisionBox.cpp  Config.cpp  Controls.cpp  DisplayMode.cpp  DisplayMode.h  DynamicBox.cpp  Editor.cpp  Explosive.cpp  Game.cpp  Goat.cpp  JoystickListener.cpp  KeyListener.cpp  LevelSelect.cpp  Menu.cpp  MouseListener.cpp  MusicManager.cpp  Options.cpp  Sensor.cpp  Sound.cpp  State.cpp  State.h  StateManager.cpp  StateManager.h  StaticBox.cpp  ToggleBox.cpp  Tools.cpp  ToolsTestSuite.cpp  UIElement.cpp  UIHandler.cpp  button.cpp  editor.cpp  game.cpp  init.cpp  joystickListener.cpp  keyListener.cpp  (+5 more)
test/: JumpingJimothyTests.cbp
(+71 files in other folders)
